--- a/src/styles/NavBar.module.css
+++ b/src/styles/NavBar.module.css
@@ -1,6 +1,5 @@
 .NavBar {
     background-color: #FFFFF6;
-    border: 1px solid #dadadf;
 }
   
 .NavLink {
@@ -8,7 +7,7 @@
 }
   
 .Active i {
-    color: #2142b2;
+    color: #3C8CCA;
 }
   
 .Img {
