--- a/src/App.module.css
+++ b/src/App.module.css
@@ -1,15 +1,16 @@
 .App h1, h2, h3 {
     font-family: "Krona One", sans-serif;
+    color: #153658;
 }
 
 .App {
     font-family: "Quicksand", sans-serif;
-    background-color: #FFFFF6;
+    background-color: #fcfcd4;
     min-height: 100vh;
 }
 
 .Main {
-    padding-top: 81px;
+    padding-top: 150px;
 }
 
 .Content {
@@ -54,7 +55,7 @@ input[type="file"] {
 }
 
 i {
-    color: #30363D;
+    color: #153658;
     font-size: 1.5rem;
     padding: 3px;
     vertical-align: middle;
