--- a/src/styles/PicsTalesCreateEditForm.module.css
+++ b/src/styles/PicsTalesCreateEditForm.module.css
@@ -1,3 +1,14 @@
 .Container {
-    min-height: 343px;
-  }
+  min-height: 343px;
+}
+
+.Content {
+  background-color: #ffffff;
+  padding: 10px;
+  border-radius: 5%;
+  border: 1px solid #dadadf;
+}
+
+.Padding {
+  padding: 10px;
+}
