--- a/src/styles/MoreDropdown.module.css
+++ b/src/styles/MoreDropdown.module.css
@@ -1,11 +1,10 @@
 .DropdownItem {
-    display: inline-block;
-    max-width: 50%;
-    padding: 0px;
-  }
-  
-  .Absolute {
-    position: absolute;
-    right: 0;
-    z-index: 99;
-  }
+  display: inline-block;
+  max-width: 50%;
+  padding: 0px;
+}
+
+.Zindex {
+  z-index: 99;
+  padding-top: 5%;
+}
