--- a/src/styles/OwnerProfilePage.module.css
+++ b/src/styles/OwnerProfilePage.module.css
@@ -5,6 +5,19 @@
     margin: 4px;
 }
 
+.PetsContainer {
+    display: flex;
+    overflow-x: auto;
+    padding-bottom: 10px;
+    margin-bottom: -10px;
+}
+
+.PetCard {
+    flex: 0 0 auto;
+    margin-right: 10px;
+    width: 200px;
+}
+
 @media screen and (max-width: 991px) {
     .ProfileImage {
         width: 250px;
