--- a/src/styles/NotFound.module.css
+++ b/src/styles/NotFound.module.css
@@ -1,3 +1,14 @@
-.NotFound {
-    margin-top: 25vh;
+.ImageContainer {
+    width: 100%;
+    height: 80%;
+    margin: 0 auto;
+}
+
+.ImageContainer img {
+    width: 100%;
+    height: auto;
+}
+
+.ImageContainer a {
+    text-align: center;
 }
