--- a/src/styles/HomeLikedPage.module.css
+++ b/src/styles/HomeLikedPage.module.css
@@ -1,39 +1,36 @@
-.HorizontalScrollContainer,
-.VerticalScrollContainer {
-    display: flex;
-    overflow-x: auto;
-    scroll-snap-type: x mandatory;
-    scroll-behavior: smooth;
-    scrollbar-width: none;
-    /* Hide the scrollbars */
+.PetsContainer {
+    /* display: flex;
+    flex-wrap: wrap; */
     -ms-overflow-style: none;
-    /* Hide the scrollbars for IE/Edge */
 }
 
-.HorizontalScrollContainer::-webkit-scrollbar,
-.VerticalScrollContainer::-webkit-scrollbar {
+.ContentContainer {
+    max-height: 80vh;
+    -ms-overflow-style: none;
+}
+
+.PetsContainer::-webkit-scrollbar,
+.ContentContainer::-webkit-scrollbar {
     display: none;
-    /* Hide the scrollbars for Chrome/Safari */
 }
 
-.HorizontalScrollContainer::-webkit-scrollbar-thumb,
-.VerticalScrollContainer::-webkit-scrollbar-thumb {
+.PetsContainer::-webkit-scrollbar-thumb,
+.ContentContainer::-webkit-scrollbar-thumb {
     background-color: transparent;
     /* Set the color of the scrollbar thumb */
 }
 
-.HorizontalScrollContainer::-webkit-scrollbar-track,
-.VerticalScrollContainer::-webkit-scrollbar-track {
+.PetsContainer::-webkit-scrollbar-track,
+.ContentContainer::-webkit-scrollbar-track {
     background-color: transparent;
     /* Set the color of the scrollbar track */
 }
 
-.HorizontalScrollContainer>*,
-.VerticalScrollContainer>* {
+.PetsContainer>*,
+.ContentContainer>* {
     scroll-snap-align: start;
 }
 
-.PetsContainer {
-    display: flex;
-    flex-wrap: wrap;
+.EndMessage {
+    -ms-overflow-style: none;
 }
