--- a/src/styles/HomeLikedPage.module.css
+++ b/src/styles/HomeLikedPage.module.css
@@ -1,12 +1,10 @@
-.PetsContainer {
-    /* display: flex;
-    flex-wrap: wrap; */
+.PetsContainer,
+.ContentContainer {
     -ms-overflow-style: none;
 }
 
 .ContentContainer {
     max-height: 80vh;
-    -ms-overflow-style: none;
 }
 
 .PetsContainer::-webkit-scrollbar,
@@ -17,13 +15,11 @@
 .PetsContainer::-webkit-scrollbar-thumb,
 .ContentContainer::-webkit-scrollbar-thumb {
     background-color: transparent;
-    /* Set the color of the scrollbar thumb */
 }
 
 .PetsContainer::-webkit-scrollbar-track,
 .ContentContainer::-webkit-scrollbar-track {
     background-color: transparent;
-    /* Set the color of the scrollbar track */
 }
 
 .PetsContainer>*,
@@ -33,4 +29,9 @@
 
 .EndMessage {
     -ms-overflow-style: none;
+}
+
+.Border {
+    border: 1px solid #;
+    padding: 5px;
 }
