--- a/src/styles/Pet.module.css
+++ b/src/styles/Pet.module.css
@@ -1,9 +1,15 @@
 .Pet {
-    background-color: #ffffff;
+    background-color: #FCFCD4;
     border: 1px solid #dadadf;
-    border-radius: 2px;
+    border-radius: 15px;
     margin-bottom: 16px;
     text-align: center;
+}
+
+.PetImage {
+    max-height: 40vh;
+    max-width: 100%;
+    object-fit: contain;
 }
 
 .Pet figure,
