--- a/src/styles/Pet.module.css
+++ b/src/styles/Pet.module.css
@@ -1,6 +1,6 @@
 .Pet {
-    background-color: #FCFCD4;
-    border: 1px solid #dadadf;
+    background-color: #242A3D;
+    border: 1px solid #fccc20;
     border-radius: 15px;
     margin-bottom: 16px;
     text-align: center;
@@ -10,6 +10,8 @@
     max-height: 40vh;
     max-width: 100%;
     object-fit: contain;
+    background-color: #fcfce5; 
+
 }
 
 .Pet figure,
