--- a/src/styles/NavBar.module.css
+++ b/src/styles/NavBar.module.css
@@ -15,3 +15,17 @@
     height: 100px;
     width: 150px;
 }
+
+.DropdownLink i {
+    color: #fccc20
+}
+
+.NavBar .Hamburger {
+    background-color: #FCFCD4;
+}
+
+.NavBar .Hamburger:focus {
+    background-color: #fccc20;
+    outline: none;
+    box-shadow: none;
+}
