--- a/src/styles/MoreDropdown.module.css
+++ b/src/styles/MoreDropdown.module.css
@@ -1,10 +1,25 @@
 .DropdownItem {
   display: inline-block;
   max-width: 50%;
-  padding: 0px;
+  padding: 2px;
+  background-color: #242A3D;
+  border: 1px solid #FCFCD4;
+}
+
+.DropdownItem i {
+  color: #FCFCD4;
 }
 
 .Zindex {
   z-index: 99;
   padding-top: 5%;
+}
+
+.DropdownItem:hover {
+  background-color: #242A3D;
+  border: 1px solid #fcc100;
+}
+
+.Active:focus {
+  color: #fcc100;
 }
