--- a/src/styles/Tale.module.css
+++ b/src/styles/Tale.module.css
@@ -1,8 +1,35 @@
-.Tale {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    min-height: 120px;
-    margin-bottom: 16px;
-  }
+.Tales {
+  background-color: #242A3D;
+  border-radius: 15px;
+  margin-bottom: 16px;
+  text-align: center;
+  border: 1px solid #FCFCD4;
+}
+
+.TalesContent {
+    background-color: #FCFCD4;
+    color: #242A3D;
+}
+
+.TaleImage {
+  max-height: 40vh;
+  background-color: #fcfce5; 
+  border-radius: 0;
+}
+
+.ScrollableContainer {
+  max-height: 35vh; 
+  overflow: auto;
+}
+
+.Heart {
+  color: #fc3511;
+}
+
+.Heart:hover {
+  color: #ffa798;
+}
+
+.HeartOutline:hover {
+  color: #fc3511; 
+}
